# LGR_FullTrackQSLapTimeSim

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.json  data.csv  docker-compose.yml  fly.toml  main.py  parameters.json  pyproject.toml  reasoningToPivot.txt  requirements-dev.txt  requirements.txt
docs/: CHANGE_ENTRY_TEMPLATE.md  DEPLOYMENT.md  DOCKER.md  DOCUMENTATION_GOALS.md  FIRST_PRINCIPLES_MIGRATION_CHECKLIST.md  LESSON_ROADMAP_TODO.md  MAJOR_CHANGE_LOG.md  MILESTONE_1_EQUATIONS_UNITS_AUDIT.md  MU_EXTRACTION_GUIDE.md  PARAMETER_ENFORCEMENT_AUDIT_ROADMAP.md  how we added rollover constraints and made it realistic.md
experimentalScripts/: ggv.py
output/: mu_summary_20251108_165610.txt  mu_summary_20251108_170520.txt  telemetry_data_20251108_165610.csv  telemetry_data_20251108_170520.csv
scriptSweeps/: liftCoastTest.py  straightLineTest.py
scripts/: cornerArchetypes.py  sweepCurvatures.py
src/: main.py  sweep.py
src/app/: auth.py  (+5 more)
tests/: conftest.py  test_allowlist.py  test_api_parameters_config.py  test_api_telemetry.py  test_auth.py  test_auth_unit.py  test_chat_schema.py  test_chat_service.py  test_cog_longitudinal_pos_canonical.py  test_falsification_and_scenario_contracts.py  test_limiting_case_contracts.py  test_mass_sweep.py  test_mu_scale_single_application.py  test_parameter_enforcement_contracts.py  test_params_from_dict.py  test_rate_limiting.py  test_security_config_overrides.py  test_security_dataset_registry.py  test_security_headers.py  test_security_paths.py  test_security_smoke.py  test_security_vehicle_params.py  (+5 more)
(+145 files in other folders)
