[project]
name = "lgr-fulltrackqslaptimesim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.3.0",
    "cryptography>=44.0.0",
    "fastapi>=0.118.0",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.37.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
]
